add images & start descriptions

--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@gamepark/game-template-app",
+  "name": "@gamepark/king-of-tokyo-duel-app",
   "version": "0.0.0",
   "private": true,
-  "description": "The user interface of Game Template adaptation for Game Park",
+  "description": "The user interface of King Of Tokyo Duel adaptation for Game Park",
   "author": "Romain Fromi <romain@game-park.com> (https://game-park.com/)",
   "license": "ISC",
   "dependencies": {
@@ -39,7 +39,7 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
-    "deploy": "yarn build && rclone sync build game-template:game-template.game-park.com --progress --s3-acl=public-read"
+    "deploy": "yarn build && rclone sync build king-of-tokyo-duel:king-of-tokyo-duel.game-park.com --progress --s3-acl=public-read"
   },
   "eslintConfig": {
     "extends": [
@@ -61,7 +61,7 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "^@gamepark/game-template/(.*)$": "<rootDir>/../rules/src/$1"
+      "^@gamepark/king-of-tokyo-duel/(.*)$": "<rootDir>/../rules/src/$1"
     }
   }
 }
