--- a/rules/package.json
+++ b/rules/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@gamepark/game-template",
+  "name": "@gamepark/king-of-tokyo-duel",
   "version": "0.0.0",
-  "description": "The rules of Game Template adapted for Game Park",
+  "description": "The rules of King Of Tokyo Duel adapted for Game Park",
   "sideEffects": false,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
