--- a/app/package.json
+++ b/app/package.json
@@ -6,10 +6,8 @@
   "author": "Romain Fromi <romain@game-park.com> (https://game-park.com/)",
   "license": "ISC",
   "dependencies": {
-    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/core": "~6.1.0",
     "@emotion/react": "^11.11.1",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@fortawesome/react-fontawesome": "^0.2.2",
     "@gamepark/avataaars": "~2.2.0",
     "@gamepark/react-game": "~6.30.2",
     "@gamepark/rules-api": "~6.30.0",
