--- a/rules/package.json
+++ b/rules/package.json
@@ -15,17 +15,14 @@
   },
   "scripts": {
     "build": "tsc",
-    "prepublishOnly": "tsc",
-    "publish": "lerna publish"
+    "prepublishOnly": "tsc"
   },
   "peerDependencies": {
-    "@gamepark/rules-api": ">=6.28",
+    "@gamepark/rules-api": ">=6.29",
     "lodash": ">=4.17"
   },
   "devDependencies": {
     "@gamepark/rules-api": "~6.30.0",
-    "@types/lodash": "^4.17.7",
-    "i18next": "^22.0.3",
-    "lodash": "^4.17.21"
+    "i18next": "^22.0.3"
   }
 }
